    - Give more meaningful usage error when size limits are exceeded (issue #162)
    - Added flag "--http11" to restrict cURL to HTTP 1.1 (issue #168)
    - Clean up mount token if FUSE itself fails to start (issue #175)
    - Detect HTTP redirects and emit appropriate hint/warning (issue #174)
    - Added man page reference to Linux bcache (issue #169)
    - Treat 3xx HTTP response codes as errors

Version 1.6.3 released October 2, 2021

    - Fixed bug with `--listBlocks' threads doing redundant overlapping queries
    - Refactor to support multiple different compression algorithms
    - Fixed mutex handling bug in block cache (issue #152)
    - Release mutexs prior to destruction (issue #151)
    - Fixed use-after-free bug in XML parser (pr #154)

Version 1.6.2 released June 14, 2020

    - Require test directory to be absolute unless `-f' flag given (issue #143)
    - Show HTTP error response payload content when `--debug-http' flag given
    - List blocks in the background; added `--listBlocksThreads' (issue #24)
    - Don't let IAM credentials expire while listing blocks (issue #146)
    - Fixed bug parsing "--configFile" inside comma-separated option list

Version 1.6.1 released December 30, 2020

    - Fixed integer overflow bug setting "x-amz-meta-s3backer-filesize" (issue #141)

Version 1.6.0 released December 23, 2020

    - Added `--sse-key-id' flag (issue #137)
    - Log a more useful error message when IAM credentials not found (issue #136)
    - Warn on startup if disk space is insufficient for disk cache (issue #138)
    - Added zero block cache to better handle fstrim operations (issue #139)

Version 1.5.6 released October 30, 2020

    - Fixed phantom write error when server-side-encryption used (issue #135)
    - Allow bucket names with "subdirectory" for prefix (issue #130)
    - Added `--configFile' flag (issue #129)
    - Added `--accessKeyEnv' flag (issue #128)
    - Removed deprecated `--rrs' flag

Version 1.5.5 released August 22, 2020
